deploy/overlays/local/node-envida/components/openehrtool-gateway/openehrtool-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envida-openehrtool-gateway  
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: openehrtool.envida.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envida-openehrtool-route  
spec:
  parentRefs:
    - name: envida-openehrtool-gateway
  hostnames:
    - openehrtool.envida.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openehrtool
          port: 9000
